--- a/main/templates/main/producto_list.html
+++ b/main/templates/main/producto_list.html
@@ -1,10 +1,6 @@
-<!DOCTYPE html>
-<html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title> LinioExp </title>
-  </head>
-  <body>
+{% extends "base.html" %}
+
+{% block content %}
     <h1> LinioExp </h1>
     <hr>
     <h3> Productos </h3>
@@ -24,5 +20,5 @@
     <ul>
       <li> <a href="{% url 'home' %}">Inicio</a> </li>
     </ul>
-  </body>
-</html>
+ {% endblock %}
+
