--- a/main/templates/main/producto_detail.html
+++ b/main/templates/main/producto_detail.html
@@ -3,6 +3,21 @@
 {% block content %}
     <h1> Linio Exp </h1>
     <hr>
+    <div class="columns">
+        {% for image in object.images.all %}
+        <div class="column is-3">
+            <figure class="image is-square">
+                <a href="{{ image.image.url }}">
+                    <img src="{{ image.image.url }}" alt="No hay imagen disponible">
+                </a>
+            </figure>
+        </div>
+        {% empty %}
+        <div class="column content">
+            <p>Aún no hay imágenes disponibles</p>
+        </div>
+        {% endfor %}
+    </div>
     <h3> {{ object.nombre }} </h3>
     <ul>
       <li><strong>Precio:</strong> {{ object.precio }}</li>
