--- a/main/templates/main/pedido_detail.html
+++ b/main/templates/main/pedido_detail.html
@@ -31,7 +31,7 @@
         </div>
     </div>
     <a href="{% url 'pedido-update' pk=object.pk %}" class='button is-info'>
-      Checkout
+      Procesar compra
     </a>
     <hr>
     <div class="content">
