--- a/main/templates/main/home.html
+++ b/main/templates/main/home.html
@@ -5,7 +5,7 @@
     <!-- Usaremos utf-8 como formato de codificación -->
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <!-- Título de nuestra página -->
-    <title>Linio Expres - Compras por internet</title>
+    <title>Linio Cervecero - Compras por internet</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.1/css/bulma.min.css">
 
@@ -47,18 +47,37 @@
         {% endfor %}
     {% endif %}
     <h5> Ultimos productos </h5>
-    <ul>
+    <div class="columns is-multiline">
       {% for producto in latest_products %}
-        <li>
-          <a href="{% url 'product-detail' producto.pk %}">
-            {{ producto.nombre }}
-          </a>
-          - {{ producto.precio }}
-        </li>
+       <div class="column is-4">
+                <div class="card">
+                    <div class="card-image">
+                        <figure class="image">
+                            <img src="{{ producto.images.first.image.url|default:'https://via.placeholder.com/128' }}" alt="Imagen no disponible">
+                        </figure>
+                    </div>
+                    <div class="card-content">
+                        <h6>
+                            <a href="{% url 'product-detail' producto.pk %}">
+                                {{ producto.nombre }}
+                            </a>
+                        </h6>
+                        <p>$ {{ producto.precio }}</p>
+                    </div>
+                </div>
+            </div>
       {% empty %}
         <li>Aun no hay productos disponibles.</li>
       {% endfor %}
-    </ul>
+    </div>
+
+
+    </div>
+  </section>
+
+    </div>
+    <div class="column">
+    <img src="https://i.ibb.co/3k0NQKV/logo-1.jpg" width="300">
     <h5> Marcas </h5>
     <ul>
       {% for marca in marcas %}
@@ -83,18 +102,16 @@
             Lata
           </a>
         </li>
+        <li>
+          <a href="{% url 'product-list' %}?q=barril">
+            Barril
+          </a>
+        </li>
     </ul>
     <hr>
     <ul>
       <li><a href="{% url 'product-list' %}">Ver Lista de Productos Completa</a></li>
     </ul>
-
-    </div>
-  </section>
-
-    </div>
-    <div class="column">
-    <img src="https://i.ibb.co/3k0NQKV/logo-1.jpg" width="300">
     </div>
     </div>
 
