--- a/main/templates/main/pedido_form.html
+++ b/main/templates/main/pedido_form.html
@@ -1,13 +1,13 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <h3 class="title"> Checkout </h3>
+    <h3 class="title"> Procesar compra </h3>
     <div class="block">
         <h5 class="subtitle"> Completa tus datos </h5>
         <form method="post">
           {% csrf_token %}
           {{ form.as_p }}
-          <input type="submit" value="Submit" class="button is-info">
+          <input type="submit" value="Procesar pago" class="button is-info">
         </form>
     </div>
     <hr>
